--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,5 @@
 @import "./assets/styles/buttons.scss";
 @import "./assets/styles/lists.scss";
 @import "./assets/styles/generics.scss";
+@import "./assets/fonts/fonts.scss";
+
