--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,15 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color=primary>
     <ion-title>
-      Tab 3
+      Resultados
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" class='ion-padding' color=secondary>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <div *ngIf="!connected || !activated">
+    <h3>Vuelve a Bluetooth y verifica conexion</h3>
+  </div>
+
 </ion-content>
