Mejoras en tabs y animaciones

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -8,8 +8,8 @@
 
 <ion-content [fullscreen]="true" class='ion-padding' color=secondary>
 
-  <div *ngIf="!connected || !activated">
-    <h3>Vuelve a Bluetooth y verifica conexion</h3>
+  <div>
+    <h3>Ningun dato todavia</h3>
   </div>
 
 </ion-content>
