--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color=primary>
     <ion-title>
-      Lecturas
+      Testeos
     </ion-title>
   </ion-toolbar>
 </ion-header>
