--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,8 +7,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="cloud-download"></ion-icon>
-      <ion-label>Lectura</ion-label>
+      <ion-icon name="options"></ion-icon>
+      <ion-label>Testeo</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
