--- a/src/assets/styles/generics.scss
+++ b/src/assets/styles/generics.scss
@@ -1,8 +1,12 @@
 .super-title {
     * {
-        box-shadow: 0 0 5px 5px green;
-        background-color: green;
+        box-shadow: 0 0 5px 5px var(--ion-color-success);
+        background-color: var(--ion-color-success);
         color: white;
+    }
+    &.desconectado {
+      box-shadow: 0 0 5px 5px var(--ion-color-danger);
+      background-color: var(--ion-color-danger);
     }
 }
 
