Mejoras json dard

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,9 +11,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class='ion-padding' color=secondary>
-  <h1 class="animate__animated animate__bounce animate__flipInX">An animated element</h1>
-  animate__flipInX
-  animate__flipOutX
+  <!-- <h1 class="animate__animated animate__bounce animate__flipInX">An animated element</h1> -->
   <!-- NO ACTIVADO -->
   <div *ngIf="!activated">
     <ion-button (click)="onActivateBluetooth()" class="button-center">
@@ -36,28 +34,34 @@
           <ion-icon name="logo-capacitor" class="icon-fab" (click)="onConnectToDevice()"></ion-icon>
         </ion-col>
       </ion-row>
-
+    </div>
+    
+    <!-- CONECTADO -->
+    <div class="ion-text-center" *ngIf="connected">
+      <div class="super-title">
+        <ion-row>
+          <ion-col>
+            <h1 class="ion-no-margin">DARD conectado</h1>
+          </ion-col>
+          <ion-col size=2 class="ion-text-end">
+            <ion-icon name="cut-outline" class="icon-fab" (click)="onDisconnectToDevice()"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </div>
       <div class="ion-text-center" *ngIf="!listDevice">
         <h3>Escanee en busca de dispositivos</h3>
       </div>
     </div>
-
-    <!-- CONECTADO -->
-    <div class="ion-text-center super-title" *ngIf="connected">
-      <ion-row>
-        <ion-col>
-          <h1 class="ion-no-margin">DARD conectado</h1>
-        </ion-col>
-        <ion-col size=2 class="ion-text-end">
-          <ion-icon name="cut-outline" class="icon-fab" (click)="onDisconnectToDevice()"></ion-icon>
-        </ion-col>
-      </ion-row>
-    </div>
   
-    <ion-grid *ngIf="listDevice">
+    <ion-grid *ngIf="listDevice" #listDeviceAnimation>
       <br>
-      <ion-title>Dispositivos</ion-title>
-      <ion-list class="list list-devices">
+      <ion-row class="ion-justify-content-between class-device">
+        <ion-title class='ion-no-padding'>Dispositivos </ion-title>
+        <ion-icon name='caret-down' *ngIf='!showDevices' (click)='showDevices = !showDevices'>  </ion-icon>
+        <ion-icon name='caret-up' *ngIf='showDevices' (click)='showDevices = !showDevices'> </ion-icon>
+      </ion-row>
+      <br>
+      <ion-list class="list list-devices" *ngIf="showDevices && listDevice.length > 0">
         <ion-row>
           <ion-col>
             <ion-label>
@@ -82,54 +86,12 @@
             </ion-label>
           </ion-col>
         </ion-row>
+        <div class="ion-text-center">
+          <h4>Seleccione algun dispositivo</h4>
+        </div>
       </ion-list>
-      <div class="ion-text-center">
-        <h3>Seleccione algun dispositivo</h3>
-      </div>
     </ion-grid>
   </div>
-
-  <ion-grid *ngIf="listDevice" #listDeviceAnimation>
-    <br>
-    <ion-row class="ion-justify-content-between class-device">
-      <ion-title class='ion-no-padding'>Dispositivos </ion-title>
-      <ion-icon name='caret-down' *ngIf='!showDevices' (click)='showDevices = !showDevices'>  </ion-icon>
-      <ion-icon name='caret-up' *ngIf='showDevices' (click)='showDevices = !showDevices'> </ion-icon>
-    </ion-row>
-    <br>
-    <ion-list class="list list-devices" [ngClass]="{'animate__flipOutX': !showDevices, 'animate__flipInX': showDevices}">
-      <ion-row>
-        <ion-col>
-          <ion-label>
-            Nombre
-          </ion-label>
-        </ion-col>
-        <ion-col>
-          <ion-label>
-            IP
-          </ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row *ngFor="let device of listDevice" (click)="onConnectToDevice(device)">
-        <ion-col>
-          <ion-label>
-            {{device.name}}
-          </ion-label>
-        </ion-col>
-        <ion-col>
-          <ion-label>
-            {{device.address}}
-          </ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-list>
-    <div class="ion-text-center">
-      <h3>Seleccione algun dispositivo</h3>
-    </div>
-  </ion-grid>
-
-
-
 
   <ion-grid *ngIf="listUnpairedDevices && listUnpairedDevices.length !== 0">
     <ion-title>Dispositivos no vinculados</ion-title>
@@ -164,7 +126,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button expand="block" (click)="onScanBluetooth()" *ngIf="!connected">
+  <ion-button expand="block" (click)="onScanBluetooth()" *ngIf="activated && !connected">
     Escanear con bluetooth
   </ion-button>
 </ion-footer>
