--- a/src/assets/styles/generics.scss
+++ b/src/assets/styles/generics.scss
@@ -5,8 +5,10 @@
         color: white;
     }
     &.desconectado {
-      box-shadow: 0 0 5px 5px var(--ion-color-danger);
-      background-color: var(--ion-color-danger);
+      * {
+        box-shadow: 0 0 5px 5px var(--ion-color-danger);
+        background-color: var(--ion-color-danger);
+      }
     }
 }
 
