--- a/src/assets/styles/generics.scss
+++ b/src/assets/styles/generics.scss
@@ -8,6 +8,10 @@
       * {
         box-shadow: 0 0 5px 5px var(--ion-color-danger);
         background-color: var(--ion-color-danger);
+        ion-icon {
+          box-shadow: 0 0 5px 5px white;
+          background-color: white;
+        }
       }
     }
 }
