--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -57,8 +57,8 @@
       <br>
       <ion-row class="ion-justify-content-between class-device">
         <ion-title class='ion-no-padding'>Dispositivos </ion-title>
-        <ion-icon name='caret-down' *ngIf='!showDevices' (click)='showDevices = !showDevices'>  </ion-icon>
-        <ion-icon name='caret-up' *ngIf='showDevices' (click)='showDevices = !showDevices'> </ion-icon>
+        <ion-icon name='caret-down' *ngIf='!showDevices' (click)='onClickChangeShowDevices()'></ion-icon>
+        <ion-icon name='caret-up' *ngIf='showDevices' (click)='onClickChangeShowDevices()'></ion-icon>
       </ion-row>
       <br>
       <ion-list class="list list-devices" *ngIf="showDevices && listDevice.length > 0">
@@ -92,38 +92,6 @@
       </ion-list>
     </ion-grid>
   </div>
-
-  <ion-grid *ngIf="listUnpairedDevices && listUnpairedDevices.length !== 0">
-    <ion-title>Dispositivos no vinculados</ion-title>
-    <ion-list class="list-devices">
-      <ion-row>
-        <ion-col>
-          <ion-label>
-            Nombre
-          </ion-label>
-        </ion-col>
-        <ion-col>
-          <ion-label>
-            IP
-          </ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row *ngFor="let device of listUnpairedDevices" (click)="onConnectToDevice(device)">
-        <ion-col>
-          <ion-label>
-            {{device.name}}
-          </ion-label>
-        </ion-col>
-        <ion-col>
-          <ion-label>
-            {{device.address}}
-          </ion-label>
-        </ion-col>
-      </ion-row>
-    </ion-list>
-  </ion-grid>
-  <br>
-</ion-content>
 
 <ion-footer>
   <ion-button expand="block" (click)="onScanBluetooth()" *ngIf="activated && !connected">
